This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


1.7.4 - 16 April 2014
=====================
+ New Bengali and Tatar translations
+ Support for opening "icyx://" stream URLs
+ Ticket #2348/#3583, Automatically refresh the information bar and title bar so that the correct information
  is always shown for streaming (e.g. online radios)
+ Ticket #4043, Statistic: Show playback rate for audio files
* If MPC-HC is configured to override the splitter choice when doing the initial track selection,
  tracks selected at splitter level will be preferred in case more than one tracks match the criteria
* The "Jump to" menu has been split in several smaller submenus displayed in the "Navigate" menu
  depending on the media currently playing
* The internal LAV Splitter will now be used by default to demux AviSynth scripts instead of using the old VFW interface.
  Note that AviSynth is still required even if LAV Splitter is used
* Cleaned up WebUI's Javascript code
* Updated SoundTouch to v1.8.0
* Updated Little CMS to v2.6 (git 40300b1)
* Updated Unrar to v5.1.2
* Updated MediaInfoLib to v0.7.68
* Updated ZenLib to v0.4.29 r456
* Updated LAV Filters to stable version 0.61.2:
    - LAV Audio: Improve error recovery on slightly corrupted audio streams
    - LAV Video: Fix a rare crash that could occur for high resolutions
    - LAV Video: Fix artifacts on some H264 streams with both software and DXVA decoding
    - LAV Splitter: Support ShoutCast metadata
    - LAV Video: Various improvements for DXVA support (native and copy-back)
    - LAV Splitter: Fix the opening of some Blu-ray discs which would take several minutes and could hang the player
    - Ticket #4035, LAV Video: Some frames were dropped when playing RealVideo files
    - Ticket #4057, LAV Splitter: Some WAV files were incorrectly detected as DTS